# MeetUpAPI

./: .env.template  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 2024_11_04_0007-2434c5f025a7_init_migration.py  2024_11_04_1507-a2fe1483762b_new_tables_likes_location.py  2024_11_06_0146-9040bda00263_add_newx_geo_indexes.py
src/: main.py
src/core/apps/: app_celery.py  s3client.py
src/core/apps/tasks/: tasks.py
src/core/apps/tasks/email/: celery_postman.py  send_for_match_email.py
src/core/apps/tasks/img_utils/: db_update_user.py  del_file.py  download.py  upload.py  watermark.py
src/core/controllers/: auth.py  clients.py  locations.py  registration.py
src/core/controllers/depends/: auth.py  get_location_by_auth_user.py  get_users_near_auth.py  match.py  reg.py  token.py
src/core/controllers/depends/utils/: conf_headers.py  connect_db.py  geo.py  jsonresponse_new_jwt.py  redis_chash.py  response_errors.py  serialize_and_deserilize.py  token_from.py
src/core/models/: crud.py  engine.py
src/core/models/cruds/: auth.py  like.py  location.py  user.py
src/core/models/models/: auth.py  like.py  location.py  user.py
src/core/settings/: constants.py  env.py
src/core/validators/: distance.py  dto.py  match.py  status_ok.py  token.py  user.py
