[tool.poetry]
name = "meetup"
version = "0.1.0"
description = ""
authors = ["Miron-Anosov <mairon26rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
bcrypt = "^4.2.0"
python-multipart = "^0.0.17"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
redis = "^5.2.0"
gunicorn = "^23.0.0"
greenlet = "^3.1.1"
alembic = "^1.13.3"
geopy = "^2.4.1"
pyjwt = "^2.9.0"
geoalchemy2 = "^0.15.2"
h3 = "^4.1.2"
pillow = "^11.0.0"
aiobotocore = "^2.15.2"
aiofiles = "^24.1.0"



[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
types-aiofiles = "^24.1.0.20240626"


[tool.black]
line-length = 79
include = '\.py'
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
